Java 18: pattern matching and finalize deprecation